--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-mail-bulk text-primary mb-4"></i>
                             <h5 class="mb-3">Digital Marketing</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">Grow your brand with results-driven Digital Marketing Services that convert clicks into customers.
+We specialize in SEO, social media, and performance marketing that delivers real growth.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -605,5 +606,6 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
