--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ We specialize in SEO, social media, and performance marketing that delivers real
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-search text-primary mb-4"></i>
                             <h5 class="mb-3">SEO & Backlinks</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">Boost your online visibility with expert SEO Services that drive long-term growth.
+Our Search Engine Optimization strategies help you rank higher and attract quality traffic.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
@@ -609,3 +610,4 @@ We specialize in SEO, social media, and performance marketing that delivers real
 
 
 </html>
+
