--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 <div class="container px-lg-5">
                     <div class="row g-5 align-items-end">
                         <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="text-white mb-4 animated slideInDown">A team of intelligent and creative minds working together
-to design meaningful digital experiences that connect brands with people.</h1>
-                            <p class="text-white pb-3 animated slideInDown">Tempor rebum no at dolore lorem clita rebum rebum ipsum rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit justo amet ipsum vero ipsum clita lorem</p>
+                            <h1 class="text-white mb-4 animated slideInDown">A Digital Agency Of Inteligents & Creative People</h1>
+                            <p class="text-white pb-3 animated slideInDown">A team of intelligent and creative minds working together
+to design meaningful digital experiences that connect brands with people.</p>
                             <a href="" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
                             <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
                         </div>
@@ -611,5 +611,6 @@ Our Search Engine Optimization strategies help you rank higher and attract quali
 
 
 </html>
+
 
 
