--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@ Our Search Engine Optimization strategies help you rank higher and attract quali
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-laptop-code text-primary mb-4"></i>
                             <h5 class="mb-3">Design & Development</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">Design that inspires, development that delivers—
+crafted to be beautiful, functional, and scalable. From concept to code, we design and develop
+digital products built for clarity, performance, and growth.</p>
                         </div>
                     </div>
                 </div>
@@ -611,6 +613,7 @@ Our Search Engine Optimization strategies help you rank higher and attract quali
 
 
 </html>
+
 
 
 
