--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ digital products built for clarity, performance, and growth.</p>
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <p class="section-title text-secondary">About Us<span></span></p>
                         <h1 class="mb-5">#1 Digital solution with 10 years of experience</h1>
-                        <p class="mb-4">Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit clita duo justo eirmod magna dolore erat amet</p>
+                        <p class="mb-4">We are a leading digital solutions agency with over 10 years of experience delivering innovative, scalable, and results-driven solutions. Our team combines strategic thinking, creative design, and technical expertise to help brands grow in an ever-evolving digital world.</p>
                         <div class="skill mb-4">
                             <div class="d-flex justify-content-between">
                                 <p class="mb-2">Digital Marketing</p>
@@ -613,6 +613,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
