--- a/index.html
+++ b/index.html
@@ -180,22 +180,22 @@ digital products built for clarity, performance, and growth.</p>
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
                         <i class="fa fa-certificate fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">2</h1>
                         <p class="text-white mb-0">Years Experience</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                         <i class="fa fa-users-cog fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">4</h1>
                         <p class="text-white mb-0">Team Members</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
                         <i class="fa fa-users fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">234</h1>
                         <p class="text-white mb-0">Satisfied Clients</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                         <i class="fa fa-check fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">1000+</h1>
                         <p class="text-white mb-0">Compleate Projects</p>
                     </div>
                 </div>
@@ -613,6 +613,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
