--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ digital products built for clarity, performance, and growth.</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                         <i class="fa fa-check fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1000+</h1>
-                        <p class="text-white mb-0">Compleate Projects</p>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">500+ </h1>
+                        <p class="text-white mb-0">Completed Projects</p>
                     </div>
                 </div>
             </div>
@@ -613,6 +613,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
