--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>DGital - Digital Agency HTML Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    
+  <!-- Primary Meta Tags -->
+  <title>Top Digital Marketing Company Driving Real Business Growth</title>
+  <meta name="title" content="Top Digital Marketing Company Driving Real Business Growth">
+  <meta name="description" content="Partner with a top digital marketing company trusted by growing brands. SEO, paid ads, content & social strategies that deliver measurable ROI.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://graphyzen.netlify.app/">
+  <meta property="og:title" content="Top Digital Marketing Company Driving Real Business Growth">
+  <meta property="og:description" content="Partner with a top digital marketing company trusted by growing brands. SEO, paid ads, content & social strategies that deliver measurable ROI.">
+  <meta property="og:image" content="https://graphyzen.netlify.app/img/about.png">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://graphyzen.netlify.app/">
+  <meta property="twitter:title" content="Top Digital Marketing Company Driving Real Business Growth">
+  <meta property="twitter:description" content="Partner with a top digital marketing company trusted by growing brands. SEO, paid ads, content & social strategies that deliver measurable ROI.">
+  <meta property="twitter:image" content="https://graphyzen.netlify.app/img/about.png">
+  
+  <!-- Optional Meta Tags -->
+  <meta name="keywords" content="top digital marketing company">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="language" content="ENGLISH">
+  <meta name="revisit-after" content="1 day days">
+  <meta name="author" content="DGital">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -613,6 +635,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
