--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    
+    <link rel="canonical" href="https://graphyzen.netlify.app/" />
   <!-- Primary Meta Tags -->
   <title>Top Digital Marketing Company Driving Real Business Growth</title>
   <meta name="title" content="Top Digital Marketing Company Driving Real Business Growth">
@@ -635,6 +635,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
