--- a/about.html
+++ b/about.html
@@ -4,11 +4,33 @@
 <head>
 	<link rel="canonical" href="https://graphyzen.netlify.app/about" />
 
-    <meta charset="utf-8">
-    <title>DGital - Digital Agency HTML Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    
+  <!-- Primary Meta Tags -->
+  <title>SEO & Backlinks: Boost Rankings with Proven Link Building Strategies</title>
+  <meta name="title" content="SEO & Backlinks: Boost Rankings with Proven Link Building Strategies">
+  <meta name="description" content="Learn how SEO & backlinks work together to improve search rankings, drive traffic, and build domain authority with proven strategies.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://graphyzen.netlify.app/about">
+  <meta property="og:title" content="SEO & Backlinks: Boost Rankings with Proven Link Building Strategies">
+  <meta property="og:description" content="Learn how SEO & backlinks work together to improve search rankings, drive traffic, and build domain authority with proven strategies.">
+  <meta property="og:image" content="https://graphyzen.netlify.app/img/about.png">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://graphyzen.netlify.app/about">
+  <meta property="twitter:title" content="SEO & Backlinks: Boost Rankings with Proven Link Building Strategies">
+  <meta property="twitter:description" content="Learn how SEO & backlinks work together to improve search rankings, drive traffic, and build domain authority with proven strategies.">
+  <meta property="twitter:image" content="https://graphyzen.netlify.app/img/about.png">
+  
+  <!-- Optional Meta Tags -->
+  <meta name="keywords" content="SEO & Backlinks">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="language" content="ENGLISH">
+  <meta name="revisit-after" content="1 day days">
+  <meta name="author" content="DGital">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -364,3 +386,4 @@
 
 
 </html>
+
