--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ digital products built for clarity, performance, and growth.</p>
                         <a href="" class="btn btn-primary py-sm-3 px-sm-5 rounded-pill mt-3">Read More</a>
                     </div>
                     <div class="col-lg-6">
-                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.png">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.png" alt="Digital marketing agency" title="digital marketing agencies near me">
                     </div>
                 </div>
             </div>
@@ -635,6 +635,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
