--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ to design meaningful digital experiences that connect brands with people.</p>
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-mail-bulk text-primary mb-4"></i>
                             <h5 class="mb-3">Digital Marketing</h5>
-                            <p class="m-0">Grow your brand with results-driven Digital Marketing Services that convert clicks into customers.
+                            <p class="m-0">Grow your brand with results-driven <a href="https://graphyzen.netlify.app/about">Digital Marketing Services</a>
+ that convert clicks into customers.
 We specialize in SEO, social media, and performance marketing that delivers real growth.</p>
                         </div>
                     </div>
@@ -635,6 +636,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
