--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@ digital products built for clarity, performance, and growth.</p>
                 <div class="row justify-content-center">
                     <div class="col-lg-7 text-center">
                         <p class="section-title text-white justify-content-center"><span></span>Newsletter<span></span></p>
-                        <h2 class="text-center text-white mb-4">Stay Always In Touch</h2>
+                        <h2 class="text-center text-white mb-4"><a href="https://graphyzen.netlify.app/contact">Stay Always In Touch</a>
+</h2>
                         <p class="text-white mb-4">Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit sed stet lorem sit clita duo justo</p>
                         <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Enter Your Email" style="height: 48px;">
@@ -636,6 +637,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
