--- a/seo.html
+++ b/seo.html
@@ -64,7 +64,7 @@
                             <div class="dropdown-menu m-0">
                                 <a href="team.html" class="dropdown-item">Our Team</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-								<a href="SEO service" class="dropdown-item">SEO</a>
+								<a href="SEO service.html" class="dropdown-item">SEO</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
 								
                             </div>
@@ -333,4 +333,5 @@
 
 
 </html>
+
 
