--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
   <title>Top Digital Marketing Company Driving Real Business Growth</title>
   <meta name="title" content="Top Digital Marketing Company Driving Real Business Growth">
   <meta name="description" content="Partner with a top digital marketing company trusted by growing brands. SEO, paid ads, content & social strategies that deliver measurable ROI.">
-  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://graphyzen.netlify.app/about"
+  },
+  "headline": "Digital solution with 10 years of experience",
+  "description": "We are a leading digital solutions agency with over 10 years of experience delivering innovative, scalable, and results-driven solutions. Our team combines strategic thinking, creative design, and technical expertise to help brands grow in an ever-evolving digital world.",
+  "image": "https://graphyzen.netlify.app/img/about.png",  
+  "author": {
+    "@type": "Person",
+    "name": "DGital",
+    "url": "https://graphyzen.netlify.app/"
+  },  
+  "publisher": {
+    "@type": "Organization",
+    "name": "",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://graphyzen.netlify.app/"
+    }
+  },
+  "datePublished": "2026-02-05",
+  "dateModified": "2027-02-05"
+}
+</script>
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://graphyzen.netlify.app/">
@@ -638,6 +665,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
