--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
   "dateModified": "2027-02-05"
 }
 </script>
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org/", 
+  "@type": "BreadcrumbList", 
+  "itemListElement": [{
+    "@type": "ListItem", 
+    "position": 1, 
+    "name": "index",
+    "item": "https://graphyzen.netlify.app/"  
+  },{
+    "@type": "ListItem", 
+    "position": 2, 
+    "name": "about",
+    "item": "https://graphyzen.netlify.app/about"  
+  }]
+}
+</script>
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://graphyzen.netlify.app/">
@@ -665,6 +682,7 @@ digital products built for clarity, performance, and growth.</p>
 
 
 </html>
+
 
 
 
