--- a/about.html
+++ b/about.html
@@ -54,6 +54,19 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "WebSite",
+  "name": "About",
+  "url": "https://jaykrishnadev.netlify.app/about",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "{search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
 </head>
 
 <body>
@@ -386,4 +399,5 @@
 
 
 </html>
+
 
